--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "ethers": "^5.7.2",
     "gh-pages": "^6.0.0",
     "https-browserify": "1.0.0",
+    "wagmi": "^1.3.9",
+    "web3": "1.10.2",
+    "web3-eth-contract": "1.10.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
